--- a/lesson01/src/main/resources/application.properties
+++ b/lesson01/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+path.application=/application.properties
 hibernate.connection.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/game}
 hibernate.connection.username=${PGUSER:postgres}
 hibernate.connection.password=${PGPASSWORD:postgres}
