--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>lesson04</module>
         <module>lesson05</module>
         <module>lesson06</module>
+        <module>lesson07</module>
     </modules>
 
     <properties>
