--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>lesson07</module>
         <module>lesson08</module>
         <module>lesson09</module>
+        <module>lesson10</module>
     </modules>
 
     <properties>
