--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>lesson08</module>
         <module>lesson09</module>
         <module>lesson10</module>
+        <module>lesson11</module>
     </modules>
 
     <properties>
