Lesson15 Boot demo

--- a/lesson14/src/main/resources/application.properties
+++ b/lesson14/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.r2dbc.password=postgres
 logging.level.root=INFO
 logging.level.springfox=WARN
 
+logging.repository.level=TRACE
+logging.repository.state=OFF
+
