--- a/lesson14/pom.xml
+++ b/lesson14/pom.xml
@@ -63,6 +63,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.javarush.khmelov</groupId>
+            <artifactId>spring-boot-starter-lesson15</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 
 
