--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>lesson10</module>
         <module>lesson11</module>
         <module>lesson13</module>
+        <module>lesson14</module>
+        <module>lesson15</module>
     </modules>
 
     <properties>
