--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>lesson13</module>
         <module>lesson14</module>
         <module>lesson15</module>
+        <module>lesson17</module>
     </modules>
 
     <properties>
