--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>lesson14</module>
         <module>lesson15</module>
         <module>lesson17</module>
+        <module>lesson18</module>
     </modules>
 
     <properties>
